# csurfer

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: TODO.md  commands.md  reources.md
exmaples/: sdl2_window.cpp  skia_window.cpp
pages/: index.html  long.html  simple.html
scripts/: build_skia.sh  format.sh  run_test_server.sh
src/: main.cpp
src/browser/: Browser.cpp  Browser.h
src/request/: HttpRequest.cpp  HttpRequest.h  IRequest.h
src/url/: Url.cpp  Url.h
src/utils/: Parser.cpp  Parser.h
